Bug fix; Finish documentation
