# back/src/resources/event/event.router.ts
@@ -4,16 +4,15 @@ import isAdminOrSelf from '../../middlewares/isAdminOrSelf';
 import isAuth from '../../middlewares/isAuth';
 import eventController from './event.controller';
 import { CreateEventDTOSchema } from './event.schema';
-import userController from '../user/user.controller';
 
 const router = Router();
 
 router.get('/', isAuth, eventController.index);
-router.post('/publish', isAuth, eventController.togglePublish);
-router.get('/:userId', isAdminOrSelf, eventController.indexFromUser);
+router.post('/publish/:eventId', isAuth, eventController.togglePublish);
+router.get('/:userId', isAuth, eventController.indexFromUser);
 router.post('/', isAuth, validate(CreateEventDTOSchema), eventController.create);
-router.put('/:userId', isAdminOrSelf, validate(CreateEventDTOSchema), userController.update);
-router.get('/:eventId', isAuth, eventController.read);
+router.put('/:eventId', isAdminOrSelf, validate(CreateEventDTOSchema), eventController.update);
+router.get('/read/:eventId', isAuth, eventController.read);
 router.delete('/:eventId', isAuth, eventController.remove);
 
 export default router;
