# back/src/resources/storeRequest/storeRequest.router.ts
@@ -11,6 +11,8 @@ const router = Router();
 router.get('/', isAdmin, storeRequestController.index);
 router.get('/u/:userId', isAdminOrSelf, storeRequestController.indexFromUser);
 router.post('/', isAuth, validate(CreateRequestSchema), storeRequestController.create);
+router.post('/accept/:requestId', isAdmin, storeRequestController.acceptRequest);
+router.post('/refuse/:requestId', isAdmin, storeRequestController.refuseRequest);
 router.get('/:requestId', isAuth, storeRequestController.read);
 router.delete('/:requestId', isAuth, storeRequestController.remove);
 
