# back/src/resources/user/user.service.ts
@@ -1,5 +1,5 @@
 import { PrismaClient, User } from '../../generated/prisma/client';
-import { CreateUserDTO, UserDTO } from './user.types';
+import { CreateUserDTO, UserDTO, UpdateUserDTO } from './user.types';
 import { genSalt, hash } from 'bcryptjs';
 
 const prisma = new PrismaClient();
@@ -23,13 +23,20 @@ async function createUser(user: CreateUserDTO): Promise<User> {
   return prisma.user.create({ data: { ...user, password } });
 }
 
-async function updateUser(id: string, user: CreateUserDTO): Promise<User> {
-  const salt = await genSalt();
-  const password = await hash(user.password, salt);
-  return prisma.user.update({
-    where: { id },
-    data: { ...user, password },
-  });
+async function updateUser(id: string, user: UpdateUserDTO | CreateUserDTO): Promise<User> {
+  if("password" in user){
+    const salt = await genSalt();
+    const password = await hash(user.password, salt);
+    return prisma.user.update({
+      where: { id },
+      data: { ...user, password },
+    });
+  }else{
+    return prisma.user.update({
+      where: { id },
+      data: user,
+    });
+  }
 }
 
 async function removeUser(id: string): Promise<User> {
